--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -44,28 +44,30 @@
     --animate-shimmer-slide: shimmer-slide var(--speed) ease-in-out infinite alternate;
     --animate-spin-around: spin-around calc(var(--speed) * 2) infinite linear;
     --animate-gradient: gradient 8s linear infinite;
-  @keyframes shimmer-slide {
-  to {
-    transform: translate(calc(100cqw - 100%), 0);
+    @keyframes shimmer-slide {
+        to {
+            transform: translate(calc(100cqw - 100%), 0);
         }
     }
-  @keyframes spin-around {
-  0% {
-    transform: translateZ(0) rotate(0);
+    @keyframes spin-around {
+        0% {
+            transform: translateZ(0) rotate(0);
         }
-  15%, 35% {
-    transform: translateZ(0) rotate(90deg);
+        15%,
+        35% {
+            transform: translateZ(0) rotate(90deg);
         }
-  65%, 85% {
-    transform: translateZ(0) rotate(270deg);
+        65%,
+        85% {
+            transform: translateZ(0) rotate(270deg);
         }
-  100% {
-    transform: translateZ(0) rotate(360deg);
+        100% {
+            transform: translateZ(0) rotate(360deg);
         }
     }
-  @keyframes gradient {
-  to {
-    background-position: var(--bg-size, 300%) 0;
+    @keyframes gradient {
+        to {
+            background-position: var(--bg-size, 300%) 0;
         }
     }
 }
@@ -140,7 +142,7 @@
 }
 
 @layer base {
-	* {
+    * {
         @apply border-border outline-ring/50;
     }
     body {
