fixed scroll in ProjectCard

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -154,3 +154,13 @@
         background-attachment: fixed;
     }
 }
+
+@layer utilities {
+    .scrollbar-hide {
+        -ms-overflow-style: none;
+        scrollbar-width: none;
+    }
+    .scrollbar-hide::-webkit-scrollbar {
+        display: none;
+    }
+}
